Atualização do banco de dados

--- a/application/modules/roteiro/views/scripts/pcf/index.phtml
+++ b/application/modules/roteiro/views/scripts/pcf/index.phtml
@@ -44,7 +44,7 @@
 
 					<div class="col-md-4 form-group1">
 						<label class="control-label">Operador</label> 
-						<input type="text" class="form-control" name="st_operador" id="st_operador">
+						<input type="text" class="form-control" name="st_operador" id="st_operador" value= '<?php echo App_Identity::get('st_usuario'); ?>'>
 					</div>
 
 					<div class="col-md-6 form-group1">
