--- a/application/modules/cadastro/views/scripts/funcionario/listagem.phtml
+++ b/application/modules/cadastro/views/scripts/funcionario/listagem.phtml
@@ -1,19 +1,13 @@
-<link rel="stylesheet" type="text/css"
-	href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
-<link rel="stylesheet" type="text/css"
-	href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css">
-<link rel="stylesheet" type="text/css"
-	href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css">
-<link rel="stylesheet" type="text/css"
-	href="https://cdn.datatables.net/select/1.3.0/css/select.dataTables.min.css">
-
-
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.3.0/css/select.dataTables.min.css">
 
 <div class="outter-wp">
 	<!--/sub-heard-part-->
 	<div class="sub-heard-part">
 		<ol class="breadcrumb m-b-0">
-			<li><a href="{{ url('/home') }}">Home</a></li>
+			<li><a href="">Home</a></li>
 			<li>Cadastro</li>
 			<li>Funcionário</li>
 			<li class="active">Listagem</li>
@@ -76,20 +70,16 @@
     <?php else :?>
         <div class="alert alert-danger fade in"
 		style="text-align: center;">
-		<strong>NÃO EXISTEM DADOS CADASTRADOS, CLIQUE NO BOTÃO "ADICIONAR
-			FUNCIONÁRIO" PARA REALIZAR OS CADASTROS</strong>
+		<strong>NÃO EXISTEM DADOS CADASTRADOS, CLIQUE NO BOTÃO "ADICIONAR FUNCIONÁRIO" PARA REALIZAR OS CADASTROS</strong>
 	</div>
     <?php endif;?>
     
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<script
-	src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-<script
-	src="https://cdn.datatables.net/rowreorder/1.2.5/js/dataTables.rowReorder.min.js"></script>
-<script
-	src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/rowreorder/1.2.5/js/dataTables.rowReorder.min.js"></script>
+<script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
 
 <script>
     $(document).ready(function() {
