--- a/application/modules/usuario/views/scripts/usuario/listagem.phtml
+++ b/application/modules/usuario/views/scripts/usuario/listagem.phtml
@@ -1,73 +1,85 @@
-<div id="content">
-	<div class="content-wrapper">
-		<div class="row">
-			<div class="col-lg-12 heading">
-				<h1 class="page-header">
-					<i class="ec-pencil2"></i> <strong>LISTAGEM DE USUÁRIOS</strong>
-				</h1>
-				<ul id="crumb" class="breadcrumb">
-				</ul>
-				<div class="option-buttons">
-					<div class="btn-toolbar" role="toolbar">
-						<div class="btn-group">
-							<a class="btn dropdown-toggle" id="dropdownMenu1"
-								href="<?php echo $this->baseUrl('/usuario/usuario/')?>">
-								<button class="btn btn-primary" type="button">
-									<i class="st-file-add"></i> ADICIONAR USUÁRIO
-								</button>
-							</a>
-						</div>
-					</div>
-				</div>
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.3.0/css/select.dataTables.min.css">
+
+<div class="outter-wp">
+	<!--/sub-heard-part-->
+	<div class="sub-heard-part">
+		<ol class="breadcrumb m-b-0">
+			<li><a href="">Home</a></li>
+			<li>Cadastro</li>
+			<li>Usuário</li>
+			<li class="active">Listagem</li>
+		</ol>
+	</div>
+	<div class="navbar-btn-right">
+		<a href="<?php echo $this->baseUrl('/usuario/usuario/')?>">
+			<button class="btn btn-green" type="button">Adicionar Usuário</button>
+		</a>
+	</div>
+	
+	<div>
+		<?php if(!empty($this->msg)):?>
+			<div class="alert alert-success fade in">
+				<button class="close" aria-hidden="true" data-dismiss="alert" type="button">x</button>
+				<i class="fa-ok alert-icon s24"></i>
+				<strong><?php echo $this->msg?></strong>
 			</div>
-		</div>
-		
-		<?php if(!empty($this->rsUsuario)):?>
-		
-			<div class="panel panel-default plain toggle panelClose panelRefresh">
-			<!-- Start .panel -->
-			<div class="panel-heading">
-				<h4 class="panel-title">Relatório de Cadastros</h4>
-			</div>
-			<div class="panel-body">
-				<table id="table-object" class="table table-striped table-bordered"
-					cellspacing="0" width="100%">
-					<thead>
-						<tr>
-							<th>Registro</th>
-							<th>Nome</th>
-							<th>Login</th>
-							<th>Perfil</th>
-							<th>Status</th>
-							<th>Ação</th>
-						</tr>
-					</thead>
-					<tbody>
-							<?php foreach ($this->rsUsuario as $rsUsuario) : ?>
-								<tr>
-							<td><?php echo str_pad($rsUsuario['id_usuario'], 5, "0", STR_PAD_LEFT); ?></td>
-							<td><?php echo $rsUsuario['nm_funcionario'] ?></td>
-							<td><?php echo $rsUsuario['st_usuario'] ?></td>
-							<td><?php echo $rsUsuario['nm_perfil'] ?></td>
-							<td><?php echo $rsUsuario['id_ativo'] == 1 ? 'ATIVO':'INATIVO';?></td>
-							<td style="text-align: center;"><a
-								href="<?php echo $this->baseUrl('/usuario/usuario/index/id/'.base64_encode($rsUsuario["id_funcionario"].'@'.$rsUsuario['id_usuario']))?>"><span
-									class="fa-edit s20" title="Editar Registro"></span></a> | <a
-								href="<?php echo $this->baseUrl('/usuario/usuario/inativarregistro/id/'.base64_encode($rsUsuario["id_funcionario"].'@'.$rsUsuario['id_usuario']))?>"><span
-									class="fa-remove s20" title="Inativar Registro"></span></a></td>
-						</tr>
-                            <?php endforeach; ?>
-						</tbody>
-				</table>
-			</div>
-		</div>
-		<?php else :?>
-            <div class="alert alert-danger fade in"
-			style="text-align: center;">
-			<strong>NÃO EXISTEM USUÁRIOS CADASTRADOS, CLIQUE NO BOTÃO "ADICIONAR
-				USUÁRIO" PARA REALIZAR OS CADASTROS</strong>
-		</div>
 		<?php endif;?>
 	</div>
-	<div class="clearfix"></div>
+	
+    <?php if(!empty($this->rsUsuario)):?>
+    <div class="graph">
+		<div class="tables">
+			<table id="example" class="display nowrap" style="width: 100%">
+				<thead>
+					<tr>
+						<th>usuario</th>
+						<th>Situação</th>
+						<th>Ação</th>
+					</tr>
+				</thead>
+				<tbody> 
+                    <?php foreach ($this->rsUsuario as $list) : ?>
+                        <tr>
+						<td><?php echo $list['st_usuario'] ?></td>
+						<td><?php echo $list['id_ativo'] == 1 ? '<strong style="color:green;">'.'ATIVO'.'</strong>':'<strong style="color:red;">'.'INATIVO'.'</strong>'; ?></td>
+						<td style="text-align: center; width: 15%;">
+							<a href="<?php echo $this->baseUrl('/usuario/usuario/index/id/'.$list['id_usuario'])?>"><span class="label label-primary" title="Editar Registro"><i class="fa fa-edit"></i></span></a>
+                            <?php if($list['id_ativo']==1):?>
+                                <a href="<?php echo $this->baseUrl('/usuario/usuario/inativarregistro/id/'.$list['id_usuario'].'/ativo/0')?>"><span class="label label-danger" title="Inativar Registro"><i class="fa fa-times-circle"></i></span></a>
+                            <?php else: ?>
+                                <a href="<?php echo $this->baseUrl('/usuario/usuario/inativarregistro/id/'.$list['id_usuario'].'/ativo/1')?>"><span class="label label-warning" title="Ativar Registro"><i class="fa fa-times-circle"></i></span></a>
+                        	<?php endif;?>
+                        </td>
+					</tr> 
+                    <?php endforeach; ?>
+                </tbody>
+			</table>
+		</div>
+	</div>
+    <?php else :?>
+        <div class="alert alert-danger fade in"
+		style="text-align: center;">
+		<strong>NÃO EXISTEM DADOS CADASTRADOS, CLIQUE NO BOTÃO "ADICIONAR FUNCIONÁRIO" PARA REALIZAR OS CADASTROS</strong>
+	</div>
+    <?php endif;?>
+    
 </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/rowreorder/1.2.5/js/dataTables.rowReorder.min.js"></script>
+<script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+
+<script>
+    $(document).ready(function() {
+        var table = $('#example').DataTable( {
+            rowReorder: {
+                selector: 'td:nth-child(2)'
+            },
+            responsive: true
+        } );
+    } );
+</script>
